# MyPBR

./: CMakeLists.txt  README.md  glad.c  main.cpp
include/GLAD/glad/: glad.h
include/MYHEAD/include/Camera/: carena.h
include/MYHEAD/include/Geometry/: geometry.h
include/MYHEAD/include/Mesh/: mesh.h
include/MYHEAD/include/Model/: model.h
include/MYHEAD/include/stb_image/: stb_image.h
resources/: FragmentShader.frag  VertexShader.vert
